# paparazzi

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: WORKFLOWS.md  dependabot.yml
.github/workflows/: cli.yml  landing.yml  release.yml
landing/: .lighthouserc.json  index.html  package-lock.json  package.json
landing/src/: App.css  App.tsx  main.tsx
landing/src/pages/: BlogPost.css  BlogPost.tsx  Blogs.css  Blogs.tsx  Docs.css  Docs.tsx
macos/applescripts/: ghostty_send.applescript  iterm2_send.applescript  terminal_send.applescript  terminal_tty_send.applescript
src/: cli.rs  constants.rs  daemon.rs  logger.rs  main.rs  screenshot.rs  terminal.rs
