[package]
name = "clipse"
version = "0.1.0"
edition = "2024"
authors = ["Sachin <sachinbeniwal0101@gmail.com>"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
crossbeam-channel = "0.5.15"
enigo = "0.6.1"
global-hotkey = "0.7.0"
screenshots = "0.8.10"
tempfile = "3.23.0"
winit = "0.30.12"