[package]
name = "paparazzi"
version = "0.1.0"
edition = "2024"
authors = ["Sachin <sachinbeniwal0101@gmail.com>"]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
clap = { version = "4.5.49", features = ["derive"] }
crossbeam-channel = "0.5.15"
daemonize = "0.5.0"
dirs = "6.0.0"
enigo = "0.6.1"
global-hotkey = "0.7.0"
nix = { version = "0.30.1", features = ["process", "signal"] }
screenshots = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
signal-hook = "0.3.18"
sysinfo = "0.36.1"
tempfile = "3.23.0"
winit = "0.30.12"
