[package]
name = "paparazzi"
description = "A macOS-native command-line tool that captures screenshots and sends them directly to Claude Code with minimal setup."
version = "0.1.1"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["Sachin <sachinbeniwal0101@gmail.com>"]
repository = "https://github.com/benodiwal/paparazzi"
homepage = "https://www.paparazziforclaude.com"
keywords = ["claude", "screenshot", "cli", "macos", "automation"]

[[bin]]
name = "paparazzi"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
clap = { version = "4.5.51", features = ["derive"] }
crossbeam-channel = "0.5.15"
daemonize = "0.5.0"
dirs = "6.0.0"
enigo = "0.6.1"
global-hotkey = "0.7.0"
nix = { version = "0.30.1", features = ["process", "signal"] }
screenshots = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
signal-hook = "0.3.18"
sysinfo = "0.36.1"
tempfile = "3.23.0"
winit = "0.30.12"
